cabal-version:       >=1.10
name:                puffnfresh-ghc-plugin-lens
version:             0.0.1
license:             BSD3
license-file:        LICENSE
category:            Data
build-type:          Simple

library
  exposed-modules:
    Puffnfresh.GHC.Plugin.Lens
  other-modules:
    Puffnfresh.GHC.Plugin.Lens.Types
  build-depends:
    base < 5
    , ghc
    , lens
  hs-source-dirs:
    src
  default-language:
    Haskell2010
